<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/post01"
        android:tag="01"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cat"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="20sp"
                android:text="@string/pt_writer01"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp"
                android:text="@string/pt_title01"/>

            <TextView
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="15sp"
                android:text="@string/pt_body01" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/post02"
        android:tag="02"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/mouse"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="20sp"
                android:text="@string/pt_writer02"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp"
                android:text="@string/pt_title02"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="15sp"
                android:text="@string/pt_body02" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/post03"
        android:tag="02"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_48"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="20sp"
                android:text="@string/pt_writer03"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp"
                android:text="@string/pt_title03"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="15sp"
                android:text="@string/pt_body03" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
