<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="#FFFFFF">


    <!-- by. 한지현, 이하영-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="25dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            app:srcCompat="@drawable/icon_32" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:paddingBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:paddingBottom="10dp"/>
            <Button
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="btnProSetClick"
                android:text="설정" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
